# docker-minecraft-server

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  test  ui.txt
lib/: colors.sh  errors.sh  logging.sh
src/: cli.rs  main.rs
