[package]
name = "mc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
paw = "1.0.0"
structopt = { version = "0.3.23", features = ["paw"] }
tokio = { version = "1.6.0", features = ["full"] }
